--- a/invitroTKstats/vignettes/MS-REDdata-Apr2023.Rmd
+++ b/invitroTKstats/vignettes/MS-REDdata-Apr2023.Rmd
@@ -1,12 +1,12 @@
 ---
-  title: "Smeltz 2023 LC PFAS RED Data"
+title: "Smeltz 2023 LC PFAS RED Data"
 author: "John Wambaugh"
 date: "April 26, 2023"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Smeltz 2023 RED Data}
-%\VignetteEngine{knitr::rmarkdown}
-%\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
   wambaugh.john@epa.gov
 
@@ -24,14 +24,19 @@ vignette: >
     rm(list=ls())
 ```
 
+Note that the following code chunks describe how the data.frame smeltz2023.red
+was created. Since we have already created this "level1" file we can just load
+it from the invitroTKstats package. Any chunk that includes the statement 
+"eval = FALSE" is not evaluated when the vignette is created.
+
     # Change to the directory that has your Excel file 
     # (this is where it is on my computer):
-```{r set_working_directory, eval = TRUE}   
+```{r set_working_directory, eval = FALSE}   
     setwd("c:/users/jwambaug/git/invitroTKstats/working/SmeltzPFAS")
 ``` 
 
 # Load chemical data:
-```{r load_data, eval = TRUE}  
+```{r load_data, eval = FALSE}  
 chem.ids <- read_excel("PFAS LC-MS RED Summary 20220709.xlsx", sheet=1, skip=1)[1:29,1:2]
 chem.ids <- as.data.frame(chem.ids)
 chem.ids <- subset(chem.ids, !duplicated(chem.ids[,2]))
@@ -70,7 +75,7 @@ smeltz.red <- subset(smeltz.red,!is.na(DTXSID))
 ```
 
 # Convert date and time to strings:
-```{r times_to_strings, eval = TRUE}  
+```{r times_to_strings, eval = FALSE}  
 smeltz.red$Acq.Date <- as.Date(as.numeric(smeltz.red$Acq.Date),origin = "1899-12-30")
 h <- floor(as.numeric(smeltz.red$Acq.Time)*24)
 m <- as.character(floor((as.numeric(smeltz.red$Acq.Time)*24-h)*60))
@@ -81,7 +86,7 @@ smeltz.red$Acq.Time <- paste(h,m,sep=":")
 
   
 # Set reasonable precision:
-```{r set_precision, eval = TRUE}  
+```{r set_precision, eval = FALSE}  
 for (this.col in c("Area", "Height", "IS Area", "RT", "%Dev",
                    "Response", "Coeff. Of Determination", "Std. Conc", "nM"))
   smeltz.red[,this.col] <- signif(as.numeric(smeltz.red[,this.col]),6)
@@ -89,7 +94,7 @@ for (this.col in c("Area", "Height", "IS Area", "RT", "%Dev",
 
 
 # Set Compound Identities:
-```{r compound_identities, eval = TRUE}
+```{r compound_identities, eval = FALSE}
 chem.ids$Compound <- unlist(lapply(strsplit(chem.ids[,2]," \\("),function(x) x[[1]])) 
 for (this.id in unique(smeltz.red$DTXSID))
 {
@@ -105,7 +110,7 @@ smeltz.red[is.na(smeltz.red$Compound), "Compound"] <- "ISTD"
 ```
 
 # Match chemicals to their internal standards:
-```{r match_istd, eval = TRUE}
+```{r match_istd, eval = FALSE}
 test.chems <- unique(smeltz.red$DTXSID)
 test.chems <- test.chems[regexpr("DTXSID",test.chems)!=-1]
 for (this.chem in test.chems)
@@ -123,7 +128,7 @@ smeltz.red <- subset(smeltz.red, Compound != "ISTD")
 ```
 
 # Use invitroTKstats annotation of type:
-```{r UC_set_sample_types, eval=TRUE}
+```{r UC_set_sample_types, eval=FALSE}
 smeltz.red <- subset(smeltz.red,!is.na(smeltz.red[,"Sample Text"]))
 smeltz.red[regexpr("CC",smeltz.red[,"Sample Text"])!=-1,
                    "Sample.Type"] <- "CC"
@@ -156,26 +161,26 @@ smeltz.red[regexpr("Matrix Blank",smeltz.red[,"Sample Text"])!=-1,
 ```
 
 # Smeltz Crash Blanks weren't analyzed in MS, set to zero:
-```{r handle_crash_blanks, eval=TRUE}
+```{r handle_crash_blanks, eval=FALSE}
 smeltz.red[smeltz.red[,"Sample.Type"]%in%"NoPlasma.Blank","Area"] <- 0
 smeltz.red[smeltz.red[,"Sample.Type"]%in%"NoPlasma.Blank","IS Area"] <- 1
 ```
 
 # Blank analyte cells for matrix blanks for 8:2FTSA were zeros:
-```{r correct_82FTSA, eval=TRUE}
+```{r correct_82FTSA, eval=FALSE}
 smeltz.red[smeltz.red[,"Sample.Type"]%in%"Plasma.Blank" &
            smeltz.red$DTXSID=="DTXSID00192353", "Area"] <- 0
 ```
 
 # Restrict to samples with peak areas for analyte and internal standard
-```{r require_peaks, eval=TRUE}
+```{r require_peaks, eval=FALSE}
 smeltz.red[,"Std. Conc"] <- as.numeric(smeltz.red[,"Std. Conc"])
 smeltz.red <- subset(smeltz.red, !is.na(Area) & 
   !is.na(smeltz.red[,"IS Area"]))
 ```
 
 # Annotate dilution factors:
-```{r annotate_dilution_facor, eval=TRUE}
+```{r annotate_dilution_facor, eval=FALSE}
 smeltz.red[sapply(smeltz.red[,"Sample.Type"],function(x) "CC" %in% x),"Dilution.Factor"] <- 1
 smeltz.red[sapply(smeltz.red[,"Sample.Type"],function(x) "PBS" %in% x),"Dilution.Factor"] <- 2
 smeltz.red[sapply(smeltz.red[,"Sample.Type"],function(x) "EC1" %in% x),"Dilution.Factor"] <- 10
@@ -189,18 +194,18 @@ smeltz.red[sapply(smeltz.red[,"Sample.Type"],function(x) "NoPlasma.Blank" %in% x
 
 # Standard concentrations differ slightly from Protocol (CC17 = CC16, etc)
 # Units should be uM:
-```{r convert_units_for_standard, eval=TRUE}
+```{r convert_units_for_standard, eval=FALSE}
 smeltz.red[,"Std. Conc"] <- as.numeric(smeltz.red[,"Std. Conc"])/100
 ```
 
 # 8:2 Fluorotelomer sulfonic acid:
-```{r correct_82FTSA_2, eval=TRUE}
+```{r correct_82FTSA_2, eval=FALSE}
 bad.samples <-which(smeltz.red$DTXSID=="DTXSID00192353")
 # Set them all to the same date (therefore the same calibration):
 smeltz.red[bad.samples,"Acq.Date"] <- smeltz.red[bad.samples[1],"Acq.Date"]
 ```
 
-```{r format_and_annotate, eval=TRUE}
+```{r format_and_annotate, eval=FALSE}
 level1 <- format_fup_red(smeltz.red,
   FILENAME="SmeltzPFAS",
   sample.col ="Name",
@@ -229,7 +234,7 @@ level1 <- format_fup_red(smeltz.red,
 rm(smeltz.red)
 ```
 
-```{r create_level2, eval=TRUE}
+```{r create_level2, eval=FALSE}
 level2 <- level1
 level2$Verified <- "Y"
 ```
@@ -237,14 +242,14 @@ level2$Verified <- "Y"
 # Extra data for 8:2 Fluorotelomer sulfonic acid needs to be ignored
 # (first 54 sampes are okay):
 # 8:2 Fluorotelomer sulfonic acid:
-```{r correct_82FTSA_3, eval=TRUE}
+```{r correct_82FTSA_3, eval=FALSE}
 bad.samples <-which(level2$DTXSID=="DTXSID00192353")
 bad.samples <- bad.samples[44:length(bad.samples)]
 level2[bad.samples,"Verified"] <- "Ignored"
 ```
 
 # Some chemicals did not reach equilibrium (see Table 3):
-```{r remove_noeq_chems, eval=TRUE}
+```{r remove_noeq_chems, eval=FALSE}
 level2[level2$DTXSID%in%c(
   "DTXSID3031860", # Perfluoro-3,6,9-trioxatridecanoic acid
   "DTXSID50375114", # Perfluoro-3,6,9-trioxatridecanoic acid	
@@ -257,6 +262,10 @@ level2[level2$DTXSID%in%c(
   "DTXSID3059921", # Perfluorotetradecanoic acid
   "DTXSID90868151"), # Perfluorotridecanoic acid
   "Verified"] <- "Did not reach equilibrium"
+```
+
+```{r load_preprocessed_data_from_package, eval=TRUE}
+level2 <- invitroTKstats::smeltz2023.red
 ```
 
 ```{r write_level2, eval=TRUE} 
@@ -273,7 +282,9 @@ level3 <- calc_fup_red_point(FILENAME="SmeltzPFAS")
 ```
 
 # Bayesian analysis:
-```{r Bayes, eval=TRUE}
+The following code can take a long time to run and so "eval = FALSE" is set
+by default. You must manually run this code or change to "eval = TRUE".
+```{r Bayes, eval=FALSE}
 # repeat these bits in case a markov chain crashes and we need to restart:
 library(invitroTKstats)
 rm(list=ls())
