--- a/working/CrizerPFAS/DC-ClintData-Jun2023.Rmd
+++ b/working/CrizerPFAS/DC-ClintData-Jun2023.Rmd
@@ -226,14 +226,16 @@ level2[level2$Level0.File %in% wetmore.files &
          "DTXSID50226894",
          "DTXSID50379814",
          "DTXSID00880026",
-         "DTXSID70565479") &
+         "DTXSID80380837") &
        regexpr("WAX1",level2$Note)!=-1, "Verified"] <- "Not in WAX1"
 
 level2[level2$Level0.File %in% wetmore.files &
        level2$DTXSID %in% c(
          "DTXSID90382620",
          "DTXSID1032646",
+         "DTXSID00379925",
          "DTXSID80382154",
+         "DTXSID70565479",
          "DTXSID40187142") &
        regexpr("WAX2",level2$Note)!=-1, "Verified"] <- "Not in WAX2"
 
